fix mobile nav bar. add loading for buttons. fix spacing

--- a/src/components/mobileNavBar.module.css
+++ b/src/components/mobileNavBar.module.css
@@ -1,6 +1,6 @@
 .titleContainer {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin: 0 0.5rem;
 }
